# quick-pick

./: .prettierrc  README.md  package-lock.json  package.json  release.config.cjs  release.config.js  svelte.config.js  tailwind.config.cjs
.github/workflows/: release.yml
src/: app.d.ts  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  spotlight.rs
src/lib/: app.ts  stores.ts  util.ts
src/lib/components/: DeleteBtn.svelte  Header.svelte  ItemClipboard.svelte  ItemNote.svelte  ItemResource.svelte  ItemSnippet.svelte  ItemUrl.svelte  QuickApps.svelte  ResourceForm.svelte  TitleBar.svelte
src/routes/: +layout.svelte  +layout.ts
src/routes/dropzone/: +page.svelte
src/routes/journal/: +page.svelte
src/routes/main/: +layout.svelte  +page.svelte
src/routes/manage/: +page.svelte
src/routes/manage/settings/: +page.svelte  General.svelte  Theme.svelte
src/routes/note/: +page.svelte
static/: 404.html
