[package]
name = "quick-pick"
# see used package.json version
version = "0.0.0" 
description = "A simple personalized search tool"
authors = ["Aldrin Arabis"]
license = ""
repository = "https://github.com/arabisaldrin/quick-pick"
default-run = "quick-pick"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = ["clipboard-all", "dialog-open", "dialog-save", "fs-all", "global-shortcut-all", "macos-private-api", "notification-all", "path-all", "protocol-asset", "shell-all", "system-tray", "window-all"] }
tauri-plugin-positioner = { version = "1.0", features = ["system-tray"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
enigo = "0.0.14"
cocoa = { version = "0.24.1" }
objc =  { version = "0.2.7" }
tauri-plugin-clipboard = "0.2.4"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
